src/objects/ICG_Capability_Assignment_Certification__mdt.object
<CustomObject>
    <description>Establishes mandatory relationships between Equipments and Certifications</description>
    <label>OS_Capability Assignment Certification</label>
    <pluralLabel>OS_Capability Assignment Certifications</pluralLabel>
    <fields>
        <fullName>Certifications__c</fullName>
        <description>, (comma) separated list of values that represent Certifications.</description>
        <label>Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>Equipment&apos;s description</description>
        <label>Equipment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AnimalAttendant_Amenities</fullName>
                </value>
                <value>
                    <fullName>Ball_Caster_Decks</fullName>
                </value>
                <value>
                    <fullName>Barcode_Scanners</fullName>
                </value>
                <value>
                    <fullName>Battery_Replacement_For_Active_ULDs</fullName>
                </value>
                <value>
                    <fullName>Beneficial_Insects_Bees</fullName>
                </value>
                <value>
                    <fullName>Birds</fullName>
                </value>
                <value>
                    <fullName>Build_Up_Break_Down_Station_General</fullName>
                </value>
                <value>
                    <fullName>Build_Up_Break_Down_Stations_20ft_ULDs</fullName>
                </value>
                <value>
                    <fullName>Build_Up_Break_Down_Stations_AKE_10ft_ULDs</fullName>
                </value>
                <value>
                    <fullName>Build_Up_Break_Down_Stations_For_Special_Loads</fullName>
                </value>
                <value>
                    <fullName>Built_ULDs_Storage_System</fullName>
                </value>
                <value>
                    <fullName>Carbon_Dioxide_CO2_Monitors</fullName>
                </value>
                <value>
                    <fullName>CARDIT</fullName>
                </value>
                <value>
                    <fullName>Cargo_Acceptance_Module</fullName>
                </value>
                <value>
                    <fullName>Cargo_Dashboard</fullName>
                </value>
                <value>
                    <fullName>Cargo_Handling_Warehouse_Management_System</fullName>
                </value>
                <value>
                    <fullName>CCTV</fullName>
                </value>
                <value>
                    <fullName>Cold_Rooms_15_To_25</fullName>
                </value>
                <value>
                    <fullName>Cold_Rooms_2_To_25</fullName>
                </value>
                <value>
                    <fullName>Cold_Rooms_2_To_8</fullName>
                </value>
                <value>
                    <fullName>Cold_Rooms_Other_Temperature_Range</fullName>
                </value>
                <value>
                    <fullName>Crane</fullName>
                    <default>true</default>
                    <label>Crane</label>
                </value>
                <value>
                    <fullName>Customer_Management_Module</fullName>
                </value>
                <value>
                    <fullName>Customer_Management_Module_For_Carriers</fullName>
                </value>
                <value>
                    <fullName>Customer_Management_Module_For_Consigners</fullName>
                </value>
                <value>
                    <fullName>Customer_Management_Module_For_FreightForwarders</fullName>
                </value>
                <value>
                    <fullName>Customer_Management_Module_For_Shippers</fullName>
                </value>
                <value>
                    <fullName>Dangerous_Goods_Area</fullName>
                </value>
                <value>
                    <fullName>Delivery_Counter</fullName>
                </value>
                <value>
                    <fullName>Discrepancy_Module</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Custom error message to display when a piece of equipment fails to comply with, at least, one certification</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>DisplayCertifs</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Equipment__c</columns>
        <columns>Certifications__c</columns>
        <filterScope>Everything</filterScope>
        <label>DisplayCertifs</label>
        <language>en_US</language>
    </listViews>
</CustomObject>